# exercises

codewars-hs/: codewars-hs.cabal
codewars-hs/src/: Codewars.hs
codewars-hs/src/Codewars/: FindTheNthEvilNumber.hs  JsonParser.hs  LensApprentice.hs  Lensmaker.hs  OperatorParser.hs  ParseALinkedListFromString.hs  ReplaceWithAlphabetPosition.hs  Singletons.hs  TheMostImperativeFunctionalLanguage.hs  TribonacciSequence.hs  WritingApplicativeParsersFromScratch.hs
codewars-js/: package.json
codewars-js/src/: efficient-power-modulo-n.js
codewars-nasm/: asm.sh
codewars-nasm/src/: greatest-common-divisor.asm  multiples-of-3-or-5.asm  sum-of-intervals.asm
codewars-rs/: Cargo.toml
codewars-rs/src/: _efficient_power_modulo_n.rs  _evaluate_mathematical_expressions.rs  evaluate_mathematical_expressions.rs  lib.rs  simplifying_multilinear_polynomials.rs
leetcode-js/: .editorconfig  package.json
leetcode-js/src/: count-sorted-vowel-string.js  median-of-two-sorted-arrays.js  nim-game.js
leetcode-rs/src/: _add_two_numbers.rs  _balanced_binary_tree.rs  _binary_tree_inorder_traversal.rs  _binary_tree_maximum_path_sum.rs  (+15 more)
parsing-techniques-rs/: Cargo.toml  README.md
project-euler/: 2.py  3.py
project-euler-py/: 1.py
sicp/: 1.12.rkt  1.16.rkt  1.18.rkt  1.24.rkt  1.27.rkt  1.3.rkt  1.31.rkt  1.38.rkt  1.43.rkt  1.44.rkt  1.45.rkt  1.7.rkt  fibonacci.rkt
sicp-rkt/: 1.10.rkt  1.11.rkt  1.19.rkt  1.22.rkt  1.23.rkt  1.30.rkt  1.32.rkt  1.35.rkt  1.37.rkt  1.40.rkt  1.44.py  1.46.rkt  1.8.rkt  2.2.rkt  counting-change.rkt  gcd.rkt  prime.rkt  rational.rkt  sqrt.rkt
(+3 files in other folders)
