cabal-version:      3.0
name:               codewars-hs
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-name-shadowing -Wno-partial-type-signatures

library
    import:           warnings
    exposed-modules:  Codewars
    build-depends:    base ^>=4.16.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite codewars-hs-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.0.0,
        codewars-hs
